# protocolo_git_taller_deymonnaz

./: .gitignore  README.md  pack_file.pack
Rusty/: .env  .env.txt  .gitignore.txt  Cargo.toml  archivo.txt  compressed_data  create_database.sh  diesel.toml  dogs  ejemplo.txt  hola  rusty.sh  test.txt
Rusty/migrations/: 0001_pull_requests_up.sql
Rusty/src/: constants.rs  lib.rs  main.rs  server.rs  ui.rs
Rusty/src/client/: client_protocol.rs  main.rs  mod.rs
Rusty/src/commands/: commands.rs  git_commands.rs  helpers.rs  mod.rs  protocol_utils.rs  structs.rs
Rusty/src/server/: controller.rs  database.rs  http_requests.rs  locked_branches_manager.rs  main.rs  mod.rs  models.rs  pull_requests.txt  server_protocol.rs
Rusty/src/ui/: style.css  ui.rs
