[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
libflate = "2"
tempfile = "3.2"
rocket = "^0.5.0"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = "1.35.0"

[[bin]]
name = "main"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
