[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
libflate = "2"
tempfile = "3.2"
rocket = { version = "^0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35.0", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
rocket_okapi = { features = [ "swagger", "rapidoc" ] }
schemars = { version = "0.8", features = ["chrono"] }

[[bin]]
name = "main"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
